@@ -336,6 +336,34 @@ name|hadoop
 operator|.
 name|mapreduce
 operator|.
+name|Reducer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|TaskInputOutputContext
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
 name|lib
 operator|.
 name|input
@@ -514,30 +542,26 @@ name|class
 argument_list|)
 decl_stmt|;
 DECL|class|DistributedCacheChecker
-specifier|public
+specifier|private
 specifier|static
 class|class
 name|DistributedCacheChecker
-extends|extends
-name|Mapper
-argument_list|<
-name|LongWritable
-argument_list|,
-name|Text
-argument_list|,
-name|NullWritable
-argument_list|,
-name|NullWritable
-argument_list|>
 block|{
-annotation|@
-name|Override
-DECL|method|setup (Context context)
+DECL|method|setup (TaskInputOutputContext<?, ?, ?, ?> context)
 specifier|public
 name|void
 name|setup
 parameter_list|(
-name|Context
+name|TaskInputOutputContext
+argument_list|<
+name|?
+argument_list|,
+name|?
+argument_list|,
+name|?
+argument_list|,
+name|?
+argument_list|>
 name|context
 parameter_list|)
 throws|throws
@@ -640,6 +664,43 @@ argument_list|,
 name|archives
 operator|.
 name|length
+argument_list|)
+expr_stmt|;
+comment|// Check the file name
+name|TestCase
+operator|.
+name|assertTrue
+argument_list|(
+name|files
+index|[
+literal|0
+index|]
+operator|.
+name|getPath
+argument_list|()
+operator|.
+name|endsWith
+argument_list|(
+literal|"distributed.first"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|TestCase
+operator|.
+name|assertTrue
+argument_list|(
+name|files
+index|[
+literal|1
+index|]
+operator|.
+name|getPath
+argument_list|()
+operator|.
+name|endsWith
+argument_list|(
+literal|"distributed.second.jar"
+argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// Check lengths of the files
@@ -832,6 +893,90 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+DECL|class|DistributedCacheCheckerMapper
+specifier|public
+specifier|static
+class|class
+name|DistributedCacheCheckerMapper
+extends|extends
+name|Mapper
+argument_list|<
+name|LongWritable
+argument_list|,
+name|Text
+argument_list|,
+name|NullWritable
+argument_list|,
+name|NullWritable
+argument_list|>
+block|{
+annotation|@
+name|Override
+DECL|method|setup (Context context)
+specifier|protected
+name|void
+name|setup
+parameter_list|(
+name|Context
+name|context
+parameter_list|)
+throws|throws
+name|IOException
+throws|,
+name|InterruptedException
+block|{
+operator|new
+name|DistributedCacheChecker
+argument_list|()
+operator|.
+name|setup
+argument_list|(
+name|context
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|class|DistributedCacheCheckerReducer
+specifier|public
+specifier|static
+class|class
+name|DistributedCacheCheckerReducer
+extends|extends
+name|Reducer
+argument_list|<
+name|LongWritable
+argument_list|,
+name|Text
+argument_list|,
+name|NullWritable
+argument_list|,
+name|NullWritable
+argument_list|>
+block|{
+annotation|@
+name|Override
+DECL|method|setup (Context context)
+specifier|public
+name|void
+name|setup
+parameter_list|(
+name|Context
+name|context
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+operator|new
+name|DistributedCacheChecker
+argument_list|()
+operator|.
+name|setup
+argument_list|(
+name|context
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 DECL|method|testWithConf (Configuration conf)
 specifier|private
 name|void
@@ -923,7 +1068,16 @@ name|job
 operator|.
 name|setMapperClass
 argument_list|(
-name|DistributedCacheChecker
+name|DistributedCacheCheckerMapper
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|job
+operator|.
+name|setReducerClass
+argument_list|(
+name|DistributedCacheCheckerReducer
 operator|.
 name|class
 argument_list|)
